# retail_data_harmonizer

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml  ty.toml
.github/workflows/: ci.yml
backend/: __init__.py  snowflake.py
backend/api/: __init__.py  app_logging.py  config.py  deps.py  dev_proxy.py  errors.py  snowflake_client.py
backend/services/: __init__.py  base.py  cache.py  comparison.py  dashboard.py  logs.py  pipeline.py  review.py  settings.py  testing.py
cli/: __init__.py  config.py  console.py  snowflake.py
cli/commands/: __init__.py  api.py  data.py  db.py  web.py
docker/: Dockerfile.api  Dockerfile.react  docker-compose.yml  nginx.conf
docs/: ARCHITECTURE.md
frontend/react/: .env.development  .env.example  .env.production  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
sql/setup/: 01_roles_and_warehouse.sql  02_schema_and_tables.sql  03_event_views.sql  04_telemetry.sql  06_category_taxonomy.sql  07_raw_items_stream.sql  08_dedup_normalization.sql  09_fastpath_cache.sql  10_item_lineage.sql  12_parallel_matchers.sql  13_admin_utilities.sql  14_cost_tracking.sql  15_task_coordination.sql  16_task_dag_definition.sql  17_reevaluation_triggers.sql  18_api_views.sql  19_materialized_aggregates.sql  21_role_grants.sql  README.md
sql/teardown/: 01_teardown.sql
sql/utils/: spcs_deploy.sql
tests/: conftest.py  test_api.py  test_api_snowflake_client.py  test_cli.py  test_cli_commands.py  test_cli_snowflake.py  test_core_snowflake.py  test_coverage_gaps.py  test_coverage_improvements.py  test_integration.py  test_item_lineage.py  test_normalization.py  test_schemas.py  test_services.py  test_sql.py
tests/api/: test_app_logging.py  test_auth.py  test_comparison.py  test_dashboard.py  test_errors.py  test_logs.py  test_matches.py  test_pipeline.py  (+3 more)
(+403 files in other folders)
